grid-meter-app/k8s/traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      nodeSelector:
        ingress-ready: "true"
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Equal
          effect: NoSchedule
      containers:
        - name: traefik
          image: traefik:v3.7.10
          args:
            - --providers.kubernetescrd
            - --entrypoints.web.address=:80
            - --api.dashboard=true
          ports:
            - name: web
              containerPort: 80
              hostPort: 80
          resources:
            limits:
              memory: 128Mi
